--- a/user-management-server/package.json
+++ b/user-management-server/package.json
@@ -10,6 +10,7 @@
   "author": "Muhammad Bin Ahmad",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
